<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="1"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="112dp"
        android:layout_height="112dp"
        android:layout_gravity="left|top"
        android:layout_rowSpan="3"
        android:layout_weight="0.17"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/item_layout_telbroj"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView1"
        android:layout_alignParentRight="true"
        android:text="@string/telbroj" />

    <TextView
        android:id="@+id/item_layout_prezime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/item_layout_ime"
        android:layout_centerHorizontal="true"
        android:text="@string/prezime" />

    <TextView
        android:id="@+id/item_layout_ime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/item_layout_prezime"
        android:layout_alignParentTop="true"
        android:layout_marginTop="17dp"
        android:text="@string/ime" />

    <TextView
        android:id="@+id/item_layout_spol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/item_layout_prezime"
        android:layout_below="@+id/item_layout_prezime"
        android:text="@string/spol" />

</RelativeLayout>